Fixed players and overflows

--- a/packages/theme/styles/_layouts.scss
+++ b/packages/theme/styles/_layouts.scss
@@ -763,6 +763,8 @@ input.search {
 .square-4 { width: 1rem; height: 1rem; }
 .square-36 { width: 2.25rem; height: 2.25rem; }
 
+.object-contain { object-fit: contain; }
+
 /* --------- */
 .svg-xx-small {
   width: .5rem;
